Fixed JUnit5TestRunnerTest.java to filter out everything except the project under test